--- a/usage-extension/popup/popup.html
+++ b/usage-extension/popup/popup.html
@@ -1,50 +1,81 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="popup.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/purecss@3.0.0/build/pure-min.css" integrity="sha384-X38yfunGUhNzHpBaEBsWLO+A0HDYOQi8ufWDkZ0k9e0eXz/tH3II7uKZ9msv++Ls" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="popup.css">
+    <!-- https://icons.getbootstrap.com/#icons -->
   </head>
   <body>
    
 
     <div class="root">
       <div class="pure-g">
-        <div class="pure-u-1-1"> <h2>Hola!</h2> </div>
+        <div class="pure-u-1-1 centre"> <h2>Digital Ocean Usage</h2> </div>
       </div>
 
-      <div class="pure-g top-buttons">
-        <div class="pure-u-1-6"> </div>
-        <div class="pure-u-1-2"> 
-          <button class="pure-button pure-button-primary" id="displayResults">
-            <i class="fa fa-square-poll-horizontal"></i>Generate Results
-          </button>
-          <button class="pure-button pure-button-primary" id="showCreator">
-            Show Creator
-          </button>
+      <div class="pure-menu pure-menu-horizontal">
+        <ul class="pure-menu-list">
+            <li class="pure-menu-item pure-menu-selected" id="menuReport">
+                <a href="#" class="pure-menu-link">Report</a>
+            </li>
+            <li class="pure-menu-item" id="menusSupplementPage">
+                <a href="#" class="pure-menu-link">Supplement Page</a>
+            </li>
+        </ul>
+      </div>
+
+      <div id="sectionReport" class="section">
+        <div class="pure-g top-buttons">
+          <div class="pure-u-1-5"> </div>
+          <div class="centre pure-u-3-5">
+            <button class="pure-button pure-button-primary" id="displayResults">
+              <i class="bi bi-newspaper" id="displayResultsIcon"></i>Generate Results
+            </button>
+            <button class="pure-button pure-button-primary" id="downloadResults">
+              <i class="bi bi-clipboard" id="downloadIcon"></i>Copy Slack Message
+            </button>
+            <button class="pure-button pure-button-primary" id="clearCache">
+              <i class="bi bi-trash"></i>Clear Results
+            </button>
+          </div>
+          <div class="pure-u-1-5">  </div>
         </div>
-        <div class="pure-u-1-6">  </div>
-      </div>
+        <div class="display-results pure-g" id="results-root" hidden>
+          <div class="pure-u-1-24"> </div>
+          <div class="pure-u-22-24 centre">
+            <table class="pure-table pure-table-horizontal" id="results-table">
+              <thead>
+                  <tr>
+                      <th>Droplet</th>
+                      <th>User</th>
+                      <th>Created</th>
+                      <th>Age (D:H)</th>
+                  </tr>
+              </thead>
+              <tbody id="results-body">
 
-      <div class="pure-g display-results" id="results-root">
-        <div class="pure-u-1-6"> </div>
-        <div class="pure-u-1-2"> 
-          <table class="pure-table pure-table-horizontal" id="results-table">
-            <thead>
-                <tr>
-                    <th>Droplet</th>
-                    <th>User</th>
-                    <th>Created</th>
-                    <th>Age</th>
-                </tr>
-            </thead>
-            <tbody id="results-body">
-
-            </tbody>
-          </table>
+              </tbody>
+            </table>
+          </div>
+          <div class="pure-u-1-24"> </div>
         </div>
-        <div class="pure-u-1-6">  </div>
       </div>
+
+      <div id="sectionSupplementPage" hidden class="section">
+        <div class="pure-g top-buttons">
+          <div class="pure-u-1-5"> </div>
+          <div class="pure-u-3-5 centre">
+            <button class="pure-button pure-button-primary" id="showCreator">
+              <i class="bi bi-box-arrow-in-down-right"></i>Add Creator to Page's Droplets
+            </button>
+          </div>
+          <div class="pure-u-1-5"> </div>
+        </div>
+      </div>
+
     </div>
+
     <script src="popup.js" type="module"></script>
   </body>
 </html>
