--- a/usage-extension/popup/popup.html
+++ b/usage-extension/popup/popup.html
@@ -14,64 +14,70 @@
         <div class="pure-u-1-1 centre"> <h2>Digital Ocean Usage</h2> </div>
       </div>
 
-      <div class="pure-menu pure-menu-horizontal">
-        <ul class="pure-menu-list">
-            <li class="pure-menu-item pure-menu-selected" id="menuReport">
-                <a href="#" class="pure-menu-link">Report</a>
-            </li>
-            <li class="pure-menu-item" id="menusSupplementPage">
-                <a href="#" class="pure-menu-link">Supplement Page</a>
-            </li>
-        </ul>
+      <div id="validate-page" hidden>
+        <div class="pure-menu pure-menu-horizontal">
+          <ul class="pure-menu-list">
+              <li class="pure-menu-item pure-menu-selected" id="menuReport">
+                  <a href="#" class="pure-menu-link">Report</a>
+              </li>
+              <li class="pure-menu-item" id="menusSupplementPage">
+                  <a href="#" class="pure-menu-link">Supplement Page</a>
+              </li>
+          </ul>
+        </div>
+  
+        <div id="sectionReport" class="section">
+          <div class="pure-g top-buttons">
+            <div class="pure-u-1-5"> </div>
+            <div class="centre pure-u-3-5">
+              <button class="pure-button pure-button-primary" id="displayResults">
+                <i class="bi bi-newspaper" id="displayResultsIcon"></i>Generate Results
+              </button>
+              <button class="pure-button pure-button-primary" id="downloadResults">
+                <i class="bi bi-clipboard" id="downloadIcon"></i>Copy Slack Message
+              </button>
+              <button class="pure-button pure-button-primary" id="clearCache">
+                <i class="bi bi-trash"></i>Clear Results
+              </button>
+            </div>
+            <div class="pure-u-1-5">  </div>
+          </div>
+          <div class="display-results pure-g" id="results-root" hidden>
+            <div class="pure-u-1-24"> </div>
+            <div class="pure-u-22-24 centre">
+              <table class="pure-table pure-table-horizontal" id="results-table">
+                <thead>
+                    <tr>
+                        <th>Droplet</th>
+                        <th>User</th>
+                        <th>Created</th>
+                        <th>Age (D:H)</th>
+                    </tr>
+                </thead>
+                <tbody id="results-body">
+  
+                </tbody>
+              </table>
+            </div>
+            <div class="pure-u-1-24"> </div>
+          </div>
+        </div>
+  
+        <div id="sectionSupplementPage" hidden class="section">
+          <div class="pure-g top-buttons">
+            <div class="pure-u-1-5"> </div>
+            <div class="pure-u-3-5 centre">
+              <button class="pure-button pure-button-primary" id="showCreator">
+                <i class="bi bi-box-arrow-in-down-right"></i>Add Creator to Droplet's Page
+              </button>
+            </div>
+            <div class="pure-u-1-5"> </div>
+          </div>
+        </div>
       </div>
 
-      <div id="sectionReport" class="section">
-        <div class="pure-g top-buttons">
-          <div class="pure-u-1-5"> </div>
-          <div class="centre pure-u-3-5">
-            <button class="pure-button pure-button-primary" id="displayResults">
-              <i class="bi bi-newspaper" id="displayResultsIcon"></i>Generate Results
-            </button>
-            <button class="pure-button pure-button-primary" id="downloadResults">
-              <i class="bi bi-clipboard" id="downloadIcon"></i>Copy Slack Message
-            </button>
-            <button class="pure-button pure-button-primary" id="clearCache">
-              <i class="bi bi-trash"></i>Clear Results
-            </button>
-          </div>
-          <div class="pure-u-1-5">  </div>
-        </div>
-        <div class="display-results pure-g" id="results-root" hidden>
-          <div class="pure-u-1-24"> </div>
-          <div class="pure-u-22-24 centre">
-            <table class="pure-table pure-table-horizontal" id="results-table">
-              <thead>
-                  <tr>
-                      <th>Droplet</th>
-                      <th>User</th>
-                      <th>Created</th>
-                      <th>Age (D:H)</th>
-                  </tr>
-              </thead>
-              <tbody id="results-body">
-
-              </tbody>
-            </table>
-          </div>
-          <div class="pure-u-1-24"> </div>
-        </div>
-      </div>
-
-      <div id="sectionSupplementPage" hidden class="section">
-        <div class="pure-g top-buttons">
-          <div class="pure-u-1-5"> </div>
-          <div class="pure-u-3-5 centre">
-            <button class="pure-button pure-button-primary" id="showCreator">
-              <i class="bi bi-box-arrow-in-down-right"></i>Add Creator to Page's Droplets
-            </button>
-          </div>
-          <div class="pure-u-1-5"> </div>
-        </div>
+      <div id="invalidate-page" class="centre" style="padding-top: 40px;" hidden>
+          Extension must be run from a Digital Ocean tab
       </div>
 
     </div>
