--- a/usage-extension/popup/popup.html
+++ b/usage-extension/popup/popup.html
@@ -22,9 +22,6 @@
               <button class="pure-button pure-button-primary" id="clearCache">
                 <i class="bi bi-trash"></i>Empty Cache
               </button>
-              <button class="pure-button pure-button-primary" id="downloadResults">
-                <i class="bi bi-clipboard" id="downloadIcon"></i>Copy Slack Message
-              </button>
           </div>
           <div class="pure-u-1-5">  </div>
         </div>
@@ -46,6 +43,12 @@
             <div class="pure-u-3-5 flex-centre">
                 <button class="pure-button pure-button-primary" id="showCreator">
                   <i class="bi bi-box-arrow-in-down-right"></i>Supplement Droplet's Page
+                </button>
+                <button class="pure-button pure-button-primary" id="downloadResults">
+                  <i class="bi bi-clipboard" id="downloadIcon"></i>Copy Slack Message
+                </button>
+                <button class="pure-button pure-button-primary" id="goToDroplets">
+                  <i class="bi bi-droplet" ></i>Go To Droplets
                 </button>
             </div>
             <div class="pure-u-1-5">  </div>
@@ -85,16 +88,36 @@
         </div>
   
         <div id="sectionSshKeysPage" hidden class="section">
+          <div class="pure-g top-buttons">
+            <div class="pure-u-1-5"> </div>
+            <div class="pure-u-3-5 flex-centre">
+                <button class="pure-button pure-button-primary" id="goToSshKeys">
+                  <i class="bi bi-key" ></i>Go To SSH Keys
+                </button>
+            </div>
+            <div class="pure-u-1-5">  </div>
+          </div>
+
           <div class="pure-g">
             <div class="pure-u-1-24"> </div>
             <div class="pure-u-22-24 flex-centre flex-column">
+              <table class="pure-table pure-table-horizontal sshkey-summary-table" id="sshkey-summary-table">
+                <thead>
+                    <tr>
+                        <th>Summary</th>
+                    </tr>
+                </thead>
+                <tbody id="sshkey-summary-body">
+                </tbody>
+              </table>
+
               <table class="pure-table pure-table-horizontal sshkey-table" id="sshkey-table">
                 <thead>
                     <tr>
                         <th>Name</th>
                         <th>Droplet</th>
-                        <th>Droplet Owner</th>
                         <th>Created</th>
+                        <th>Delete</th>
                     </tr>
                 </thead>
                 <tbody id="summary-body">
