Better slack message, quote fixes

--- a/usage-extension/popup/popup.html
+++ b/usage-extension/popup/popup.html
@@ -44,8 +44,8 @@
                 <button class="pure-button pure-button-primary" id="showCreator">
                   <i class="bi bi-box-arrow-in-down-right"></i>Supplement Droplet's Page
                 </button>
-                <button class="pure-button pure-button-primary" id="downloadResults">
-                  <i class="bi bi-clipboard" id="downloadIcon"></i>Copy Slack Message
+                <button class="pure-button pure-button-primary" id="slackResults">
+                  <i class="bi bi-clipboard" id="slackResultsIcon"></i>Copy Slack Message
                 </button>
                 <button class="pure-button pure-button-primary" id="goToDroplets">
                   <i class="bi bi-droplet" ></i>Go To Droplets
