more tidying up

--- a/usage-extension/popup/popup.html
+++ b/usage-extension/popup/popup.html
@@ -14,7 +14,7 @@
         <div class="pure-u-1-1 flex-centre"> <h2>Digital Ocean Usage</h2> </div>
       </div>
 
-      <div id="valid-page" hidden>
+      <div id="valid-page" class="valid-page " hidden>
         <div class="pure-g top-buttons">
           <div class="pure-u-1-5"> </div>
           <div class="pure-u-3-5 flex-centre">
