Final fixes / tweaks

--- a/usage-extension/popup/popup.html
+++ b/usage-extension/popup/popup.html
@@ -56,10 +56,8 @@
             <div class="pure-u-1-5">  </div>
           </div>
 
-          <div class="pure-g" id="results-root" hidden>
-            <div class="pure-u-1-24"> </div>
-            <div class="pure-u-22-24 flex-centre flex-column">
-              <table class="pure-table pure-table-horizontal" id="droplet-summary-table">
+          <div class="pure-g" id="droplets-root" hidden>
+              <table class="pure-table pure-table-horizontal " id="droplet-summary-table">
                 <thead>
                     <tr>
                         <th>Running Droplets</th>
@@ -84,8 +82,6 @@
   
                 </tbody>
               </table>
-            </div>
-            <div class="pure-u-1-24"> </div>
           </div>
         </div>
   
@@ -100,9 +96,7 @@
             <div class="pure-u-1-5">  </div>
           </div>
 
-          <div class="pure-g">
-            <div class="pure-u-1-24"> </div>
-            <div class="pure-u-22-24 flex-centre flex-column">
+          <div class="pure-g" id="sshkeys-root" hidden>
               <table class="pure-table pure-table-horizontal" id="sshkey-summary-table">
                 <thead>
                     <tr>
@@ -125,8 +119,6 @@
                 <tbody id="summary-body">
                 </tbody>
               </table>
-            </div>
-            <div class="pure-u-1-24"> </div>
           </div>
         </div>
       </div>
