Add better intro, tweak cost info

--- a/usage-extension/popup/popup.html
+++ b/usage-extension/popup/popup.html
@@ -74,8 +74,8 @@
                     <tr>
                         <th>Droplet</th>
                         <th>User</th>
-                        <th>Created</th>
-                        <th>Cost(ish)</th>
+                        <th style="min-width: 175px;">Created</th>
+                        <th style="min-width: 95px;">Cost(ish)</th>
                     </tr>
                 </thead>
                 <tbody id="results-body">
